<?xml version="1.0"?>
<package format="2">
  <name>trimble_gnss_driver</name>
  <version>0.0.0</version>
  <description>The trimble_gnss_driver package</description>

  <maintainer email="mhutchinson@sagarobotics.com">Michael Hutchinson</maintainer>


  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export>

  </export>

</package>
